methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:31: error: type mismatch;
 found   : Unit
 required: Boolean
        if (! isFacingWall()) {
        ^